--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>XTV Studio - Streaming Premium</title>
+    <title>XTV Studio -  La Nueva Era en TV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fuentes e íconos -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&amp;family=Poppins:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
