--- a/index.html
+++ b/index.html
@@ -1646,7 +1646,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
+                                
                             </div>
                             <p class="testimonial-text">La aplicación funciona perfectamente en mi TV y en mi celular, el soporte un 1o.</p>
                             <div class="testimonial-author">
@@ -1711,8 +1711,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                                <i class="fas fa-star-o"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                             <p class="testimonial-text">Recién me uní y la verdad me gusto mucho, yo miro C5N y futboll pero tiene muchos canales.</p>
                             <div class="testimonial-author">
@@ -1800,7 +1799,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
+                             
                             </div>
                             <p class="testimonial-text">Me gusta, lo tengo funcionandoen la TV del living y en 2 dormitorios</p>
                             <div class="testimonial-author">
