--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
                 <a href="#testimonials" class="navbar-link">Nuestros Clientes</a>
 
             </div>
-            <a href="#pricing" class="navbar-cta boton-obtener">Obtener Ahora</a>
+            <a href="https://mpago.la/1PMRRXx" class="navbar-cta boton-obtener">Obtener Ahora</a>
         </div>
     </nav>
 
