--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <html lang="es">
 
 <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BYN0HGCKGV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BYN0HGCKGV');
+</script>
+
+    
     <meta charset="UTF-8">
       <title>XTV Studio </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
