--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
   }
 
-/* Asegúrate de que tu navbar tenga 70px de altura (o ajusta a tu medida). */
 :root {
-    --header-height: 40px;
+    --header-height: 70px;
 }
 
+/* Ajusta scroll-padding-top para coincidir con --header-height */
 html {
-    scroll-padding-top: var(--header-height); /* Ajusta la altura */
-    scroll-behavior: smooth; /* Opcional: para scroll suave */
+  scroll-padding-top: var(--header-height);
+  scroll-behavior: smooth;
 }
 
         /* Logo: se hace más pequeña la palabra “Studio” */
@@ -131,32 +131,35 @@ html {
         /* ---------- Fin Estilos Extra ---------- */
 
         /* Navbar */
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            z-index: 1000;
-            padding: 1rem 0;
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(255,255,255,0.95);
+  backdrop-filter: blur(10px);
+  z-index: 1000;
+  /* ↓ Reducido de 1rem a 0.3rem */
+  padding: 0.05 rem 0;
+  box-shadow: 0 2px 20px rgba(0,0,0,0.1);
+  transition: all 0.3s ease;
+}
 
-        .navbar-scrolled {
-            padding: 0.7rem 0;
-            background: rgba(255, 255, 255, 0.98);
-        }
+.navbar-scrolled {
+  /* ↓ Reducido de 0.7rem a 0.3rem */
+  padding: 0.05 rem 0;
+  background: rgba(255,255,255,0.98);
+}
 
-        .navbar-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  /* ↓ Reducido de 1rem 2rem a 0.5rem 1.5rem */
+  padding: 0 rem 0.05 rem;
+}
 
         .navbar-logo {
             font-family: 'Montserrat', sans-serif;
